--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ header {
     color: #000;
 }
 
-.brand-desc,.feature-list-info p {
+.item-desc {
     font-weight: 400;
     color: #727272;
     margin: 15px 0;
@@ -76,28 +76,206 @@ header {
     text-align: center;
     margin-top: 50px;
 }
+
 /* feature style */
-.features-list-container{
+.features-list-container {
     display: flex;
     gap: 75px;
     justify-content: center;
     align-items: center;
     margin-top: 60px;
 }
-.features-list-img{
+
+.features-list-img {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     column-gap: 24px;
     row-gap: 24px;
 }
-.feature-list-info h2{
+
+.feature-list-info h2 {
     font-weight: 700;
-font-size: 45px;
+    font-size: 45px;
+    color: #131313;
 }
-.quick-h2{
+
+.quick-h2 {
     font-weight: 500;
     color: #727272;
 }
-.feat-h2{
-    color:#FF900E ;
+
+.feat-h2 {
+    color: #FF900E;
+}
+
+/* features advantages section style */
+
+.features-advantages-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 90px;
+}
+
+.vl {
+    border-left: 5px solid #FF900E;
+    height: 80px;
+    margin-left: -15px;
+    margin-top: 100px;
+    display: inline-block;
+}
+
+.features-info {
+    margin-top: -185px;
+}
+
+.features-info h1 {
+    font-weight: bold;
+    font-size: 35px;
+    color: #000;
+    margin-top: 100px;
+}
+
+.features-advantages {
+    margin-left: 200px;
+}
+
+.features-advantages-item {
+    width: 586px;
+    height: 171px;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+    margin-bottom: 10px;
+    padding: 30px;
+
+}
+
+.features-advantages-img {
+    margin-left: 90px;
+}
+
+.experience-btn {
+    position: relative;
+    top: -3%;
+    left: -80%;
+    width: 260px;
+    height: 150px;
+    padding: 20px;
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+    color: #fff;
+    background: #FF900E;
+    border-radius: 8px;
+    border: none;
+
+
+}
+
+.experience-btn p {
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 40px;
+}
+/* service section style */
+.our-service-container{
+    margin: 100px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 300px;
+}
+.our-services h3{
+    text-align: center;
+    margin-bottom: 20px;
+    
+}
+.our-services ul li{
+    list-style: none;
+    text-align: center;
+    line-height: 150%;
+    font-weight: 500;
+    font-size: 25px;
+    color: #131313;
+}
+.service-section-img{
+}
+/* fact section style */
+
+.fact-info {
+    margin-left: 240px;
+}
+
+.fact-info h3,.our-services h3 {
+    font-weight: 700;
+    font-size: 35px;
+    color: #131313;
+}
+
+.fact-item-container {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    margin-top: 80px;
+
+}
+
+.fact-item {
+    width: 180px;
+    height: 180px;
+    font-weight: 600;
+    font-size: 25px;
+    color: #424242;
+    text-align: center;
+    border: 1px solid #FF900E ;
+    border-radius: 8px;
+    padding: 50px 0;
+    transition: transform .2s;
+}
+
+.fact-item:hover {
+    width: 200px;
+    height: 200px;
+    border: 1px solid #228abb;
+    transform: scale(1.2);
+}
+
+.fact-item img {
+    width: 45px;
+    height: 45px;
+}
+
+.fact-item-desc-tow {
+    font-weight: 600;
+    font-size: 15px;
+    color: #727272;
+}
+/* sponsor section style */
+
+.sponsor-info h3{
+    margin-top: 100px;
+    font-weight: 700;
+font-size: 35px;
+color: #131313;
+text-align: center;
+line-height: 200%;
+}
+.sponsor-info p{
+    text-align: center;
+    color: #727272;
+    line-height: 150%;
+}
+.sponsor-list-container{
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-evenly;
+}
+footer{
+    background: #FFF4E7;
+border-radius: 8px;
+color: #424242;
+text-align: center;
+padding: 30px;
+width: 1440px;
+margin: 120px auto;
+
 }
